--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </p>
 
       <p>
-      <li> <a href="https://openreview.net/forum?id=jE6VXUhxq9">On Causal Discovery in the Presence of Deterministic Relations</a>
+      <li> <a href="https://openreview.net/forum?id=pfvcsgFrJ6">On Causal Discovery in the Presence of Deterministic Relations</a>
       <br>
       <strong>Loka Li*</strong>, Haoyue Dai*, Hanin Al Ghothani, Biwei Huang, Jiji Zhang, Shahar Harel, Isaac Bentwich, Guangyi Chen, Kun Zhang.
       <br> 
@@ -191,11 +191,13 @@
   <!-- The Service Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="service"> 
     <h2>Service</h2>
-    - Serving as a reviewer for journals and conferences, including: 
+    - Serving as a reviewer for conferences and journals, including: 
     <ul>
       <p><li>International Conference on Machine Learning (ICML)</li></p>
       <p><li>Conference on Neural Information Processing Systems (NeurIPS)</li></p>
-      <p><li> International Conference on Learning Representations (ICLR).</li></p>
+      <p><li>International Conference on Learning Representations (ICLR)</li></p>
+      <p><li>International Conference on Artificial Intelligence and Statistics (AISTATS)</li></p> 
+      <p><li>International Conference on Data Mining (ICDM)</li></p>
       <p><li> IEEE Transactions on Neural Networks and Learning Systems (TNNLS).</li></p>
       <!-- <p><li> Neural Networks (NN).</li></p> -->
     </ul>
