--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <img style="width: 80%;max-width: 400px" alt="profile photo" src="imgs/loka3.jpg"> 
       <h3><b>Loka Li</b></h3>
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
-          Hello, World! I am a third-year Ph.D. student in machine learning at Mohamed bin Zayed University of Artificial Intelligence (<a href="https://mbzuai.ac.ae/">MBZUAI</a>), where I am fortunate to be advised by Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/">Kun Zhang</a>. I am a member of the Center for Integrative Artificial Intelligence (<a href="https://ciai.site/">CIAI</a>), led by MBZUAI president Prof. Eric Xing and center director Prof. Kun Zhang. I'm interested in causality and machine learning, with a particular focus on healthcare applications.
+          Hello, World! I am Loka Li (Lo<del>ng</del>ka<del>ng</del> Li, Chinese name 李隆康), currently a third-year Ph.D. student in machine learning at Mohamed bin Zayed University of Artificial Intelligence (<a href="https://mbzuai.ac.ae/">MBZUAI</a>), where I am fortunate to be advised by Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/">Kun Zhang</a>. I am a member of the Center for Integrative Artificial Intelligence (<a href="https://ciai.site/">CIAI</a>), led by MBZUAI president Prof. Eric Xing and center director Prof. Kun Zhang. I'm interested in causality and machine learning, with a particular focus on healthcare and biology applications.
         </p>
         <p class="w3-center">
           <a style="color:#e77007" href="https://scholar.google.com/citations?user=PT5AMzgAAAAJ&hl=zh-CN"><strong>Google Scholar</strong></a> &nbsp|&nbsp
@@ -125,7 +125,7 @@
       <br>
       <strong>Loka Li*</strong>, Haoyue Dai*, Hanin Al Ghothani, Biwei Huang, Jiji Zhang, Shahar Harel, Isaac Bentwich, Guangyi Chen, Kun Zhang.
       <br> 
-      <em>Annual Conference on Neural Information Processing Systems (NeurIPS), 2024.</em> 
+      <em>Conference on Neural Information Processing Systems (NeurIPS), 2024.</em> 
       </p>
 
       <p>
@@ -232,11 +232,8 @@
           Advisor: Prof. <a href="https://sites.google.com/site/baoyuanwu2015/home">Baoyuan Wu</a>, Prof. <a href="https://sds.cuhk.edu.cn/en/teacher/65">Hongyuan Zha</a>, Prof. <a href="https://sds.cuhk.edu.cn/en/teacher/197">Chris H.Q. Ding</a>.
         </ul> -->
       </li></p>
-      <p><li> Oct.2019 - Aug.2020: Noah's Ark Lab, Huawei. <em>Research Intern</em>.
-        <!-- <ul>
-          Advisor: Dr. <a href="https://sites.google.com/site/mingxuanhw/home">Mingxuan Yuan</a>.
-        </ul> -->
-      </li></p> 
+      <!-- <p><li> Oct.2019 - Aug.2020: Noah's Ark Lab, Huawei. <em>Research Intern</em>.
+      </li></p>  -->
   </div> 
 
 
