--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
 <!-- The Home Section -->
     <div class="w3-container w3-center w3-padding-32" id="home">
       <img style="width: 80%;max-width: 400px" alt="profile photo" src="imgs/loka3.jpg"> 
-      <h3><b>Loka Li</b></h3>
+      <!-- <h3><b>Loka Li</b>  (李隆康)</h3> -->
+      <h3><b>Loka Li</b> <span style="font-size: 0.75em; font-family: 'SimSun''KaiTi', 'STKaiti', serif;">(李隆康)</span></h3>
+      <!-- <h3><b>Loka Li</b> <span style="font-size: 0.8em; font-family: 'SimHei', 'Microsoft YaHei', sans-serif;">(李隆康)</span></h3> -->
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
-          Hello, World! I am Loka Li (Lo<del>ng</del>ka<del>ng</del> Li, Chinese name 李隆康), currently a third-year Ph.D. student in machine learning at Mohamed bin Zayed University of Artificial Intelligence (<a href="https://mbzuai.ac.ae/">MBZUAI</a>), where I am fortunate to be advised by Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/">Kun Zhang</a>. I am a member of the Center for Integrative Artificial Intelligence (<a href="https://ciai.site/">CIAI</a>), led by MBZUAI president Prof. Eric Xing and center director Prof. Kun Zhang. I'm interested in causality and machine learning, with a particular focus on healthcare and biology applications.
+          Hello, World! I am a third-year Ph.D. student in machine learning at Mohamed bin Zayed University of Artificial Intelligence (<a href="https://mbzuai.ac.ae/">MBZUAI</a>), where I am fortunate to be advised by Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/">Kun Zhang</a>. I am a member of the Center for Integrative Artificial Intelligence (<a href="https://ciai.site/">CIAI</a>), led by MBZUAI president Prof. Eric Xing and center director Prof. Kun Zhang. I'm interested in causality and machine learning, with a particular focus on healthcare and biology.
         </p>
         <p class="w3-center">
           <a style="color:#e77007" href="https://scholar.google.com/citations?user=PT5AMzgAAAAJ&hl=zh-CN"><strong>Google Scholar</strong></a> &nbsp|&nbsp
