--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </style>
   <!-- #447ec9 (blue) , #f4892c (orange) -->
 
-  <link rel="icon" type="image/png" href="imgs/6.jpg">
+  <link rel="icon" type="image/png" href="imgs/6_processed.jpg">
 
 </head>
 
