--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <br>
         <strong>Loka Li</strong>, Siyuan Liang, Zihao Zhu, Chris Ding, Hongyuan Zha, Baoyuan Wu.
         <br>
-        <em>Annual AAAI Conference on Artificial Intelligence (AAAI), 2024.</em> 
+        <em>AAAI Conference on Artificial Intelligence (AAAI), 2024.</em> 
       </p>
      
       <!-- <p>
