--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <a href="#home" class="w3-bar-item w3-button">Home</a>
     <a href="#news" class="w3-bar-item w3-button">News</a>
     <a href="#publications" class="w3-bar-item w3-button">Research</a>
+    <a href="#experience" class="w3-bar-item w3-button">Invited Talk</a>
     <a href="#service" class="w3-bar-item w3-button">Service</a>
     <a href="#education" class="w3-bar-item w3-button">Education</a>
-    <a href="#experience" class="w3-bar-item w3-button">Experience</a>
     <!-- <a href="#talks" class="w3-bar-item w3-button">Teaching</a> -->
-    <a href="#more" class="w3-bar-item w3-button">Contact</a>
+    <a href="#more" class="w3-bar-item w3-button">Fun</a>
   </div>
 </nav>
 
@@ -73,14 +73,15 @@
       <h3><b>Loka Li</b> <span style="font-size: 0.75em; font-family: 'SimSun''KaiTi', 'STKaiti', serif;">(李隆康)</span></h3>
       <!-- <h3><b>Loka Li</b> <span style="font-size: 0.8em; font-family: 'SimHei', 'Microsoft YaHei', sans-serif;">(李隆康)</span></h3> -->
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
-          Hello, World! I am a third-year Ph.D. student in machine learning at Mohamed bin Zayed University of Artificial Intelligence (<a href="https://mbzuai.ac.ae/">MBZUAI</a>), where I am fortunate to be advised by Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/">Kun Zhang</a>. I am a member of the Center for Integrative Artificial Intelligence (<a href="https://ciai.site/">CIAI</a>), led by MBZUAI president Prof. Eric Xing and center director Prof. Kun Zhang. I'm interested in causality and machine learning, with a particular focus on healthcare and biology.
+          Hello, World! I am a Ph.D. candidate in machine learning at Mohamed bin Zayed University of Artificial Intelligence (<a href="https://mbzuai.ac.ae/">MBZUAI</a>), where I am fortunate to be advised by Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/">Kun Zhang</a>. I am a member of the Center for Integrative Artificial Intelligence (<a href="https://ciai.site/">CIAI</a>), led by MBZUAI president Prof. Eric Xing and center director Prof. Kun Zhang. I'm interested in causality and machine learning, with a particular focus on healthcare and biology.
         </p>
+        <p>Contact Email: Longkang.Li@mbzuai.ac.ae </p>
         <p class="w3-center">
           <a style="color:#e77007" href="https://scholar.google.com/citations?user=PT5AMzgAAAAJ&hl=zh-CN"><strong>Google Scholar</strong></a> &nbsp|&nbsp
           <a style="color:#e77007" href="https://www.linkedin.com/in/loka-li-546385245/"><strong>LinkedIn</strong></a> &nbsp|&nbsp
           <a style="color:#e77007" href="https://github.com/lokali"><strong>Github</strong></a> &nbsp|&nbsp
           <!-- <a style="color:#e77007" href="https://dblp.org/pid/272/4405.html"><strong>DBLP</strong></a>  -->
-          <a style="color:#e77007" href="#more"><strong>Email</strong></a>
+          <a style="color:#e77007" href="#more"><strong>Media</strong></a>
         </p>
         </tbody></table>
   </div>
@@ -88,6 +89,9 @@
 <!-- The News Section -->
 <div class="w3-container w3-light-grey w3-padding-32" id="news">
   <h2>News</h2>
+    <p><li> Jan.28.2025: I gave a talk invited by Abu Dhabi Investment Authority (ADIA) Lab Seminar. (<a href="https://www.linkedin.com/posts/adia-lab_we-are-pleased-to-announce-the-launch-of-activity-7287801212756750339-ro0W?utm_source=social_share_sheet&utm_medium=member_desktop_web">Link</a>)</li>
+    <p><li> Jan.25.2025: I passed my Ph.D. candidacy exam! Thanks to all committee members, including: Prof. Kun Zhang, Prof. Jin Tian, Prof. Salman Khan, and Prof. Peter Spirtes.</li></p>
+    <p><li> Jan.22.2025: One paper about causal representation learning was accepted by ICLR 2025!</li></p>
     <p><li> Sep.2024: One paper about deterministic casual discovery was accepted by NeurIPS 2024!</li></p>
     <p><li> Jan.2024: One paper about federated causal discovery was accepted by ICLR 2024!</li></p>
     <p><li> Dec.2023: One paper about imitation learning was accepted by AAAI 2024!</li></p>
@@ -113,25 +117,50 @@
     </p> -->
 
     <ul>
+      <p>
+        <li><a href="https://arxiv.org/abs/2410.23862">ψDAG: Projected Stochastic Approximation Iteration for DAG Structure Learning</a>
+          <br>
+          Klea Ziu, Slavomír Hanzely, <strong>Loka Li</strong>, Kun Zhang, Martin Takáč, Dmitry Kamzolov
+          <br>
+          <em>arXiv, 2024.</em> 
+        </li>
+      </p>
+
+      <p>
+        <li><a href="https://arxiv.org/abs/2501.10124">Gene Regulatory Network Inference in the Presence of Selection Bias and Latent Confounders</a> 
+        <br>
+        Gongxu Luo, Haoyue Dai, Boyang Sun, <strong>Loka Li</strong>, Biwei Huang, Petar Stojanov, Kun Zhang
+        <br>
+        <em>arXiv, 2024.</em>
+        </li>
+      </p>
+
+      <p>
+        <li> <a href="https://openreview.net/forum?id=hjROBHstZ3">Causal Representation Learning from Multimodal Biological Observations</a>
+        <br>
+        Yuewen Sun, Lingjing Kong, Guangyi Chen, <strong>Loka Li</strong>, Gongxu Luo, Zijian Li, Yixuan Zhang, Yujia Zheng, Mengyue Yang, Petar Stojanov, Eran Segal, Eric Xing, Kun Zhang.
+        <br>
+        <em>International Conference on Learning Representations (ICLR), 2025.</em> 
+      </p>
 
       <p>
         <li> <a href="https://arxiv.org/abs/2402.12563">Confidence Matters: Revisiting Intrinsic Self-Correction Capabilities of Large Language Models</a>
         <br>
         <strong>Loka Li*</strong>, Zhenhao Chen*, Guangyi Chen*, Yixuan Zhang, Yusheng Su, Eric Xing, Kun Zhang.
         <br>
-        <em>Preprint.</em> 
+        <em>arXiv, 2024.</em> 
       </p>
 
       <p>
       <li> <a href="https://openreview.net/forum?id=pfvcsgFrJ6">On Causal Discovery in the Presence of Deterministic Relations</a>
       <br>
-      <strong>Loka Li*</strong>, Haoyue Dai*, Hanin Al Ghothani, Biwei Huang, Jiji Zhang, Shahar Harel, Isaac Bentwich, Guangyi Chen, Kun Zhang.
+      <strong>Loka Li*</strong>, Haoyue Dai*, Hanin Ghothani, Biwei Huang, Jiji Zhang, Shahar Harel, Isaac Bentwich, Guangyi Chen, Kun Zhang.
       <br> 
       <em>Conference on Neural Information Processing Systems (NeurIPS), 2024.</em> 
       </p>
 
       <p>
-        <li> <a href="https://arxiv.org/abs/2402.13241">Federated Causal Discovery from Heterogeneous Data</a>
+        <li> <a href="https://openreview.net/forum?id=m7tJxajC3G">Federated Causal Discovery from Heterogeneous Data</a>
         <br>
         <strong>Loka Li</strong>, Ignavier Ng, Gongxu Luo, Biwei Huang, Guangyi Chen, Tongliang Liu, Bin Gu, Kun Zhang.
         <br>
@@ -139,7 +168,7 @@
       </p>
 
       <p>
-        <li> <a href="https://arxiv.org/abs/2210.17178">Learning to Optimize Permutation Flow Shop Scheduling via Graph-based Imitation Learning</a>
+        <li> <a href="https://ojs.aaai.org/index.php/AAAI/article/view/29998">Learning to Optimize Permutation Flow Shop Scheduling via Graph-based Imitation Learning</a>
         <br>
         <strong>Loka Li</strong>, Siyuan Liang, Zihao Zhu, Chris Ding, Hongyuan Zha, Baoyuan Wu.
         <br>
@@ -190,8 +219,18 @@
     </p>
   </div>
 
+   <!-- The Experiences Section -->
+   <div class="w3-container w3-light-grey w3-padding-32" id="experience">
+    <h2>Invited Talk</h2>
+      <p><li> Jan.25.2025: Abu Dhabi Investment Authority (ADIA) Lab Seminar, the inaugural session. (<a href="https://www.linkedin.com/posts/adia-lab_we-are-pleased-to-announce-the-launch-of-activity-7287801212756750339-ro0W?utm_source=social_share_sheet&utm_medium=member_desktop_web">Link</a>)
+        <ul>
+          Topic: "Causal Learning from Real World: Methodologies and Applications".
+        </ul>
+      </li></p>
+  </div> 
+
   <!-- The Service Section -->
-  <div class="w3-container w3-light-grey w3-padding-32" id="service"> 
+  <div class="w3-container w3-padding-32" id="service"> 
     <h2>Service</h2>
     - Serving as a reviewer for conferences and journals, including: 
     <ul>
@@ -206,6 +245,7 @@
 
     - Serving as a teaching assistant for the courses, including:
     <ul>
+      <p><li> 2024/2025 Spring: ML808-Advanced Topics in Causality and Machine Learning. (Instructor: Prof. Jin Tian.)</li></p>
       <p><li> 2024/2025 Fall: ML801-Foundations and Advanced Topics in Machine Learning. (Instructor: Prof. Tongliang Liu.)</li></p>
       <p><li> 2023/2024 Spring: ML802-Advanced Machine Learning. (Instructor: Prof. Tongliang Liu.)</li></p>
       <p><li> 2023/2024 Fall: ML803-Advanced Probabilistic and Statistical Inference. (Instructor: Prof. Kun Zhang.)</li></p>
@@ -213,37 +253,20 @@
   </div> 
 
   <!-- The Education Section -->
-  <div class="w3-container w3-padding-32" id="education">
+  <div class="w3-container w3-light-grey w3-padding-32" id="education">
       <h2>Education</h2>
           <p><li> Aug.2022 - Present: Ph.D. in <em>Machine Learning</em>. Mohamed bin Zayed University of Artificial Intelligence (<a href="https://mbzuai.ac.ae/">MBZUAI</a>).</li></p>
           <p><li> Aug.2018 - Aug.2020: M.Sc. in <em>Computer Science</em>. The University of Hong Kong (<a href="https://www.hku.hk">HKU</a>). </li></p> 
           <p><li> Aug.2014 - Jun.2018: B.Eng. in <em>Software Engineering</em>. Sun Yat-sen University (<a href="https://www.sysu.edu.cn/sysuen/">SYSU</a>). </li></p>
     </div>
 
-  
-  <!-- The Experiences Section -->
-  <div class="w3-container w3-light-grey w3-padding-32" id="experience">
-    <h2>Experience</h2>
-      <!-- <p><li> Aug.2022 - Feb.2023: BioMap. <em>Part-time Research Intern</em>. 
-        <ul>
-          Advisor: Prof. <a href="https://dasongle.github.io/index.html">Le Song</a>.
-        </ul>
-      </li></p> -->
-      <p><li> Sep.2020 - Jun.2022: The Chinese University of Hong Kong, Shenzhen. <em>Research Assistant</em>. 
-        <!-- <ul>
-          Advisor: Prof. <a href="https://sites.google.com/site/baoyuanwu2015/home">Baoyuan Wu</a>, Prof. <a href="https://sds.cuhk.edu.cn/en/teacher/65">Hongyuan Zha</a>, Prof. <a href="https://sds.cuhk.edu.cn/en/teacher/197">Chris H.Q. Ding</a>.
-        </ul> -->
-      </li></p>
-      <!-- <p><li> Oct.2019 - Aug.2020: Noah's Ark Lab, Huawei. <em>Research Intern</em>.
-      </li></p>  -->
-  </div> 
 
 
   <!-- The More Section -->
   <div class="w3-container w3-padding-32" id="more">
-    <h2>Contact</h2>
-    <p><li> Email: Longkang.Li@mbzuai.ac.ae </li></p>
-    <p><li> Location: ML Department, 2nd Floor, 1B Block, MBZUAI, Abu Dhabi, UAE.</li></p>
+    <h2>Fun</h2>
+    <p><li> I run my personal channels on social media  in my spare time, where I share my thoughts on study, life, and more.</li></p>
+    <p><li> All views are my own. Welcome to subscribe to my channels on <a href="https://space.bilibili.com/1237030318">Bilibili</a> and <a href="https://xiaohongshu.com/user/profile/617369df000000000201d119">RedNote</a>.</li></p>
     
     <br>
     <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=269&t=tt&d=WqNAECGeOap9rapsFKcIAmtV22D4reDnZzctz9NQrVQ&co=81bdd6&ct=ffffff&cmo=3acc3a&cmn=ff5353'></script>
@@ -252,7 +275,7 @@
 
   <div class="w3-light-grey w3-center w3-padding-24">
     Welcome to Loka's website, adapted from <a style="color: #040404" href="https://github.com/YunheWang/HomePage">HERE</a>. <br>
-    Copyright © 2024 Loka Li. All Rights Reserved.
+    Copyright © 2025 Loka Li. All Rights Reserved.
     <!-- Welcome to use this website's source code <a href="https://github.com/YunheWang/HomePage">source code</a>, just add a link back to here. <a href="https://www.wangyunhe.site/">&#10025;</a></br> -->
 
   <!-- Default Statcounter code for Yunhe Wang's Homepage
