--- a/index.html
+++ b/index.html
@@ -78,10 +78,9 @@
         <p>Contact Email: Longkang.Li@mbzuai.ac.ae </p>
         <p class="w3-center">
           <a style="color:#e77007" href="https://scholar.google.com/citations?user=PT5AMzgAAAAJ&hl=zh-CN"><strong>Google Scholar</strong></a> &nbsp|&nbsp
-          <a style="color:#e77007" href="https://www.linkedin.com/in/loka-li-546385245/"><strong>LinkedIn</strong></a> &nbsp|&nbsp
           <a style="color:#e77007" href="https://github.com/lokali"><strong>Github</strong></a> &nbsp|&nbsp
-          <!-- <a style="color:#e77007" href="https://dblp.org/pid/272/4405.html"><strong>DBLP</strong></a>  -->
-          <a style="color:#e77007" href="#more"><strong>Media</strong></a>
+          <a style="color:#e77007" href="https://www.linkedin.com/in/loka-li-546385245/"><strong>LinkedIn</strong></a> &nbsp|&nbsp
+          <a style="color:#e77007" href="#more"><strong>Fun</strong></a>
         </p>
         </tbody></table>
   </div>
