--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="w3-container w3-center w3-padding-32" id="home">
       <img style="width: 80%;max-width: 400px" alt="profile photo" src="imgs/loka3.jpg"> 
       <!-- <h3><b>Loka Li</b>  (李隆康)</h3> -->
-      <h3><b>Loka Li</b> <span style="font-size: 0.75em; font-family: 'SimSun''KaiTi', 'STKaiti', serif;">(李隆康)</span></h3>
+      <h3><b>Loka L. K. Li</b> <span style="font-size: 0.75em; font-family: 'SimSun''KaiTi', 'STKaiti', serif;">(李隆康)</span></h3>
       <!-- <h3><b>Loka Li</b> <span style="font-size: 0.8em; font-family: 'SimHei', 'Microsoft YaHei', sans-serif;">(李隆康)</span></h3> -->
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
           Hello, World! I am a Ph.D. candidate in machine learning at Mohamed bin Zayed University of Artificial Intelligence (<a href="https://mbzuai.ac.ae/">MBZUAI</a>), where I am fortunate to be advised by Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/">Kun Zhang</a>. I am a member of the Center for Integrative Artificial Intelligence (<a href="https://ciai.site/">CIAI</a>), led by MBZUAI president Prof. Eric Xing and center director Prof. Kun Zhang. I'm interested in causality and machine learning, with a particular focus on healthcare and biology.
@@ -78,8 +78,8 @@
         <p>Contact Email: Longkang.Li@mbzuai.ac.ae </p>
         <p class="w3-center">
           <a style="color:#e77007" href="https://scholar.google.com/citations?user=PT5AMzgAAAAJ&hl=zh-CN"><strong>Google Scholar</strong></a> &nbsp|&nbsp
-          <a style="color:#e77007" href="https://dblp.org/pid/371/1096.html"><strong>DBLP</strong></a> &nbsp|&nbsp
           <a style="color:#e77007" href="https://github.com/lokali"><strong>Github</strong></a> &nbsp|&nbsp
+          <a style="color:#e77007" href="https://x.com/Loka_L_Li"><strong>X</strong></a> &nbsp|&nbsp
           <a style="color:#e77007" href="https://www.linkedin.com/in/loka-li-546385245/"><strong>LinkedIn</strong></a> 
         </p>
         </tbody></table>
@@ -88,7 +88,7 @@
 <!-- The News Section -->
 <div class="w3-container w3-light-grey w3-padding-32" id="news">
   <h2>News</h2>
-    <p><li> Jan.28.2025: I gave a talk invited by Abu Dhabi Investment Authority (ADIA) Lab Seminar. (<a href="https://www.linkedin.com/posts/adia-lab_we-are-pleased-to-announce-the-launch-of-activity-7287801212756750339-ro0W?utm_source=social_share_sheet&utm_medium=member_desktop_web">Link</a>)</li>
+    <p><li> Jan.28.2025: I gave an invited talk at Abu Dhabi Investment Authority (ADIA) Lab Seminar. (<a href="https://www.linkedin.com/posts/adia-lab_we-are-pleased-to-announce-the-launch-of-activity-7287801212756750339-ro0W?utm_source=social_share_sheet&utm_medium=member_desktop_web">Link</a>)</li>
     <p><li> Jan.25.2025: I passed my Ph.D. candidacy exam! Thanks to all committee members, including: Prof. Kun Zhang, Prof. Jin Tian, Prof. Salman Khan, and Prof. Peter Spirtes.</li></p>
     <p><li> Jan.22.2025: One paper about causal representation learning was accepted by ICLR 2025!</li></p>
     <p><li> Sep.2024: One paper about deterministic casual discovery was accepted by NeurIPS 2024!</li></p>
