--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
       <h3><b>Loka L. K. Li</b> <span style="font-size: 0.75em; font-family: 'SimSun''KaiTi', 'STKaiti', serif;">(李隆康)</span></h3>
       <!-- <h3><b>Loka Li</b> <span style="font-size: 0.8em; font-family: 'SimHei', 'Microsoft YaHei', sans-serif;">(李隆康)</span></h3> -->
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
-          Hello, World! I am a Ph.D. candidate in machine learning at Mohamed bin Zayed University of Artificial Intelligence (<a href="https://mbzuai.ac.ae/">MBZUAI</a>), also a member of the Center for Integrative Artificial Intelligence (<a href="https://ciai.site/">CIAI</a>). My research interests are mainly in causality and machine learning, with a particular focus on healthcare and biology.
-          <!-- , led by MBZUAI president Prof. Eric Xing and center director Prof. Kun Zhang -->
+          Hello, World! I am a Ph.D. candidate in machine learning at Mohamed bin Zayed University of Artificial Intelligence (<a href="https://mbzuai.ac.ae/">MBZUAI</a>), also a member of the Center for Integrative Artificial Intelligence (<a href="https://ciai.site/">CIAI</a>), led by Prof. Kun Zhang and MBZUAI president Prof. Eric Xing. My research interests are mainly in causality and machine learning, with a particular focus on healthcare and biology.
           <!-- , where I am fortunate to be advised by Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/">Kun Zhang</a>. -->
         </p>
         <p>Contact Email: Longkang.Li@mbzuai.ac.ae </p>
