--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 <!-- The News Section -->
 <div class="w3-container w3-light-grey w3-padding-32" id="news">
   <h2>News</h2>
+    <p><li> May.20.2025: I will join <a href="https://genbio.ai/">GenBio</a> as a summer intern, focusing on foundation models pre-training for biology!</li></p>
     <p><li> May.01.2025: One paper about LLM text generation was accepted by ICML 2025!</li></p>
     <p><li> Jan.28.2025: I gave an invited talk at Abu Dhabi Investment Authority (ADIA) Lab Seminar. (<a href="https://www.linkedin.com/posts/adia-lab_we-are-pleased-to-announce-the-launch-of-activity-7287801212756750339-ro0W?utm_source=social_share_sheet&utm_medium=member_desktop_web">Link</a>)</li>
     <p><li> Jan.25.2025: I passed my Ph.D. candidacy exam! Thanks to all committee members, including: Prof. Kun Zhang, Prof. Jin Tian, Prof. Salman Khan, and Prof. Peter Spirtes.</li></p>
