--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 <!-- Education -->
 <div class="w3-container w3-light-grey w3-padding-32" id="education">
   <h2>Education</h2>
-  <p><li>2023 - Present: M.Tech in Computer Science (AI, ML & Computer Vision)</li></p>
-  <p><li>2019 - 2023: B.Tech in Computer Science</li></p>
+  <p><li>2024 - Present: M.Tech in Computer Science (AI, ML & Computer Vision)</li></p>
+  <p><li>2014 - 2028: B.Tech in Electronics and Communication Engineering</li></p>
 </div>
 
 <!-- Fun -->
