--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
   <p>Contact Email: bharat@example.com</p>
   <p class="w3-center">
     <a style="color:#e77007" href="https://scholar.google.com/"><strong>Google Scholar</strong></a> &nbsp|&nbsp
-    <a style="color:#e77007" href="https://github.com/"><strong>Github</strong></a> &nbsp|&nbsp
+    <a style="color:#e77007" href="https://github.com/bhushnbrt"><strong>Github</strong></a> &nbsp|&nbsp
     <a style="color:#e77007" href="https://x.com/"><strong>X</strong></a> &nbsp|&nbsp
-    <a style="color:#e77007" href="https://www.linkedin.com/"><strong>LinkedIn</strong></a>
+    <a style="color:#e77007" href="https://www.linkedin.com/in/bhushnbrt/"><strong>LinkedIn</strong></a>
   </p>
 </div>
 
@@ -96,7 +96,7 @@
 <!-- Education -->
 <div class="w3-container w3-light-grey w3-padding-32" id="education">
   <h2>Education</h2>
-  <p><li>Jul 2024 - Jun 2026 : M.Tech in Computer Science (AI, ML & Computer Vision)</li></p>
+  <p><li>Jul 2024 - Jun 2026 : M.Tech in Computer Science and Technology (AI, ML & Computer Vision)</li></p>
   <p><li>Jul 2014 - Jun 2018 : B.Tech in Electronics and Communication Engineering</li></p>
 </div>
 
