--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <p class="w3-justify" style="max-width:600px;margin:auto">
     Hello, World! I am an M.Tech student in Computer Science, specializing in Artificial Intelligence, Machine Learning, and Computer Vision. My current dissertation focuses on <strong>Deepfake Audio Detection</strong> using ML and Signal Processing techniques. I am also preparing for GATE DA 2026 alongside my research work.
   </p>
-  <p>Contact Email: bharat@example.com</p>
+  <p>Contact Email: bhushnbrt@gmail.com</p>
   <p class="w3-center">
     <a style="color:#e77007" href="https://scholar.google.com/"><strong>Google Scholar</strong></a> &nbsp|&nbsp
     <a style="color:#e77007" href="https://github.com/bhushnbrt"><strong>Github</strong></a> &nbsp|&nbsp
